--- a/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.fr.resx
+++ b/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.fr.resx
@@ -161,4 +161,20 @@
     <value>Votre token a expiré.</value>
     <comment/>
   </data>
+  <data name="DESCRIPTION_EMPTY" xml:space="preserve">
+    <value>La description ne doit pas être vide.</value>
+    <comment/>
+  </data>
+  <data name="CATEGORY_ID_EMPTY" xml:space="preserve">
+    <value>L'identifiant de la catégorie ne doit pas être vide.</value>
+    <comment/>
+  </data>
+  <data name="EQUIPMENT_ALREADY_REGISTERED" xml:space="preserve">
+    <value>Un équipement avec ce nom est déjà enregistré.</value>
+    <comment/>
+  </data>
+  <data name="CATEGORY_NOT_FOUND" xml:space="preserve">
+    <value>La catégorie n'existe pas.</value>
+    <comment/>
+  </data>
 </root>
