--- a/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.pt-BR.resx
+++ b/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.pt-BR.resx
@@ -161,4 +161,20 @@
     <value>Seu token expirou.</value>
     <comment/>
   </data>
+  <data name="AVAILABLE_QUANTITY_EQUIPMENT_INVALID" xml:space="preserve">
+    <value>A quantidade disponível tem de ser maior do que 0.</value>
+    <comment/>
+  </data>
+  <data name="CATEGORY_ID_EMPTY" xml:space="preserve">
+    <value>O ID da categoria não pode estar vazio.</value>
+    <comment/>
+  </data>
+  <data name="EQUIPMENT_ALREADY_REGISTERED" xml:space="preserve">
+    <value>Já existe um equipamento registrado com este nome.</value>
+    <comment/>
+  </data>
+  <data name="CATEGORY_NOT_FOUND" xml:space="preserve">
+    <value>A categoria não existe.</value>
+    <comment/>
+  </data>
 </root>
