feat(Shared/Exceptions): add new messages exception

--- a/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.fr.resx
+++ b/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.fr.resx
@@ -177,4 +177,8 @@
     <value>La catégorie n'existe pas.</value>
     <comment/>
   </data>
+  <data name="CATEGORY_ALREADY_REGISTERED" xml:space="preserve">
+    <value>Un catégorie avec ce nom est déjà enregistré.</value>
+    <comment/>
+  </data>
 </root>
