--- a/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.pt-BR.resx
+++ b/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.pt-BR.resx
@@ -165,8 +165,8 @@
     <value>A quantidade disponível tem de ser maior do que 0.</value>
     <comment/>
   </data>
-  <data name="CATEGORY_ID_EMPTY" xml:space="preserve">
-    <value>O ID da categoria não pode estar vazio.</value>
+  <data name="DESCRIPTION_EMPTY" xml:space="preserve">
+    <value>A descrição não pode estar vazia.</value>
     <comment/>
   </data>
   <data name="EQUIPMENT_ALREADY_REGISTERED" xml:space="preserve">
@@ -175,6 +175,14 @@
   </data>
   <data name="CATEGORY_NOT_FOUND" xml:space="preserve">
     <value>A categoria não existe.</value>
+    <comment/>
+  </data>
+  <data name="CATEGORY_ALREADY_REGISTERED" xml:space="preserve">
+    <value>Já existe uma categoria registrada com este nome.</value>
+    <comment/>
+  </data>
+  <data name="CATEGORY_ID_EMPTY" xml:space="preserve">
+    <value>O ID da categoria não pode estar vazio.</value>
     <comment/>
   </data>
 </root>
