feat(Shared/Exceptions): add new messages exception

--- a/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.fr.resx
+++ b/src/Shared/TechReserveSystem.Shared.Exceptions/Resources/ResourceMessagesException.fr.resx
@@ -185,4 +185,64 @@
     <value>La quantité ne doit pas être vide.</value>
     <comment/>
   </data>
+  <data name="RESERVATION_EXPECTED_RETURN_EMPTY" xml:space="preserve">
+    <value>La date de retour de l’équipement réservé ne peut pas être vide.</value>
+    <comment/>
+  </data>
+  <data name="RESERVATION_EXPECTED_RETURN_INVALID" xml:space="preserve">
+    <value>La date de retour de l’équipement doit être dans un format valide.</value>
+    <comment/>
+  </data>
+  <data name="RESERVATION_EXPECTED_STARTDATE_EMPTY " xml:space="preserve">
+    <value>La date de début de la réservation de l’équipement ne peut pas être vide.</value>
+    <comment/>
+  </data>
+  <data name="RESERVATION_EXPECTED_STARTDATE_INVALID" xml:space="preserve">
+    <value>La date de début de la réservation de l’équipement doit être dans un format valide.</value>
+    <comment/>
+  </data>
+  <data name="EQUIPMENT_ID_EMPTY" xml:space="preserve">
+    <value>L’identifiant de l’équipement ne peut pas être vide.</value>
+    <comment/>
+  </data>
+  <data name="USER_ID_EMPTY" xml:space="preserve">
+    <value>L’identifiant de l’utilisateur ne peut pas être vide.</value>
+    <comment/>
+  </data>
+  <data name="USER_ID_INVALID" xml:space="preserve">
+    <value>L’identifiant de l’utilisateur est dans un format invalide.</value>
+    <comment/>
+  </data>
+  <data name="EQUIPMENT_ID_INVALID" xml:space="preserve">
+    <value>L’identifiant de l’équipement est dans un format invalide.</value>
+    <comment/>
+  </data>
+  <data name="RESERVATION_PAST_DATE" xml:space="preserve">
+    <value>L’équipement ne peut pas être réservé pour une date passée.</value>
+    <comment/>
+  </data>
+  <data name="RESERVATION_RETURN_PAST_DATE" xml:space="preserve">
+    <value>La date de retour de l’équipement ne peut pas être dans le passé.</value>
+    <comment/>
+  </data>
+  <data name="RESERVATION_RETURN_BEFORE_START" xml:space="preserve">
+    <value>La date de retour de la réservation ne peut pas être antérieure à la date de début.</value>
+    <comment/>
+  </data>
+  <data name="USER_NOT_FOUND" xml:space="preserve">
+    <value>Utilisateur non trouvé.</value>
+    <comment/>
+  </data>
+  <data name="EQUIPMENT_NOT_FOUND" xml:space="preserve">
+    <value>Équipement non trouvé.</value>
+    <comment/>
+  </data>
+  <data name="RESERVATION_NOT_FOUND" xml:space="preserve">
+    <value>Réservation non trouvée.</value>
+    <comment/>
+  </data>
+  <data name="EQUIPMENT_NOT_AVAILABLE" xml:space="preserve">
+    <value> Aucun équipement disponible pour réservation à la date sélectionnée.</value>
+    <comment/>
+  </data>
 </root>
