--- a/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.pt-BR.resx
+++ b/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.pt-BR.resx
@@ -118,14 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="RESERVATION_SUCCESS" xml:space="preserve">
-    <value>Reserva realizada com sucesso.	</value>
+    <value>Reserva realizada com sucesso.</value>
     <comment/>
   </data>
   <data name="RESERVATION_CANCELED&#x9;" xml:space="preserve">
     <value>A reserva foi cancelada.	</value>
     <comment/>
   </data>
-  <data name="EQUIPMENT_NOT_AVAILABLE&#x9;" xml:space="preserve">
+  <data name="EQUIPMENT_NOT_AVAILABLE" xml:space="preserve">
     <value>Nenhum equipamento disponível para reserva na data selecionada.	</value>
     <comment/>
   </data>
