--- a/src/TechReserveSystem.Shared/Resources/Exception/ResourceMessagesException.resx
+++ b/src/TechReserveSystem.Shared/Resources/Exception/ResourceMessagesException.resx
@@ -273,4 +273,8 @@
     <value>The category description is in an invalid format or is null.</value>
     <comment/>
   </data>
+  <data name="RESERVATION_ALREADY_REJECTED_ON_DATE" xml:space="preserve">
+    <value>You already attempted to book this equipment for this date and it was rejected.</value>
+    <comment/>
+  </data>
 </root>
