--- a/src/TechReserveSystem.Shared/Resources/Exception/ResourceMessagesException.pt-BR.resx
+++ b/src/TechReserveSystem.Shared/Resources/Exception/ResourceMessagesException.pt-BR.resx
@@ -281,4 +281,8 @@
     <value>Reservas só podem ser feitas com no mínimo um dia de antecedência.</value>
     <comment/>
   </data>
+  <data name="UNRETURNED_EQUIPMENT_RESTRICTION" xml:space="preserve">
+    <value>Você tem reservas pendentes. Devolva antes de fazer uma nova.</value>
+    <comment/>
+  </data>
 </root>
