--- a/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.resx
+++ b/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.resx
@@ -129,4 +129,8 @@
     <value>No equipment available for reservation on the selected date.	</value>
     <comment/>
   </data>
+  <data name="OPERATION_SUCCESS" xml:space="preserve">
+    <value>Operation completed successfully!</value>
+    <comment/>
+  </data>
 </root>
