feat:(Shared) addd new   response messages

--- a/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.fr-FR.resx
+++ b/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.fr-FR.resx
@@ -133,4 +133,8 @@
     <value>Opération réussie avec succès!</value>
     <comment/>
   </data>
+  <data name="OPERATION_FAILURE" xml:space="preserve">
+    <value>Une erreur s'est produite lors du traitement de votre demande. Consultez les détails ci-dessous.</value>
+    <comment/>
+  </data>
 </root>
