--- a/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.pt-BR.resx
+++ b/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.pt-BR.resx
@@ -133,4 +133,8 @@
     <value>Operação realizada com sucesso!</value>
     <comment/>
   </data>
+  <data name="OPERATION_FAILURE" xml:space="preserve">
+    <value>Houve uma falha ao processar sua solicitação. Verifique os erros abaixo.</value>
+    <comment/>
+  </data>
 </root>
