--- a/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.resx
+++ b/src/TechReserveSystem.Shared/Resources/Communication/CommunicationMessages.resx
@@ -133,4 +133,8 @@
     <value>Operation completed successfully!</value>
     <comment/>
   </data>
+  <data name="OPERATION_FAILURE" xml:space="preserve">
+    <value>An error occurred while processing your request. See the details below.</value>
+    <comment/>
+  </data>
 </root>
