--- a/src/TechReserveSystem.Shared/Resources/Exception/ResourceMessagesException.pt-BR.resx
+++ b/src/TechReserveSystem.Shared/Resources/Exception/ResourceMessagesException.pt-BR.resx
@@ -289,4 +289,12 @@
     <value>Você já possui uma reserva para este equipamento nesta data.</value>
     <comment/>
   </data>
+  <data name="RESERVATION_MAX_ADVANCE_LIMIT" xml:space="preserve">
+    <value>A reserva só pode ser feita com no máximo 30 dias de antecedência.</value>
+    <comment/>
+  </data>
+  <data name="RESERVATION_MUST_BE_SAME_DAY" xml:space="preserve">
+    <value>O equipamento deve ser retirado e devolvido no mesmo dia.</value>
+    <comment/>
+  </data>
 </root>
