--- a/src/TechReserveSystem.Shared/Resources/Exception/ResourceMessagesException.pt-PT.resx
+++ b/src/TechReserveSystem.Shared/Resources/Exception/ResourceMessagesException.pt-PT.resx
@@ -293,4 +293,16 @@
     <value>A reserva deve ser utilizada e devolvida no mesmo dia.</value>
     <comment/>
   </data>
+  <data name=" INVALIDE_EQUIPMENT_STOCK" xml:space="preserve">
+    <value>O stock do equipamento deve ser pelo menos 1.</value>
+    <comment/>
+  </data>
+  <data name="EQUIPMENT_STOCK_INCREASE_INVALID" xml:space="preserve">
+    <value>A quantidade de stock adicionada deve ser positiva.</value>
+    <comment/>
+  </data>
+  <data name="EQUIPMENT_STOCK_DECREASE_INSUFFICIENT" xml:space="preserve">
+    <value>Não pode remover uma quantidade maior do que a disponível em stock.</value>
+    <comment/>
+  </data>
 </root>
